gearset/main/default/objects/TestingObjectWithCustomFields__c/TestingObjectWithCustomFields__c.object-meta.xml
<CustomObject>
    <description>An object with CustomFields.  It will be used for checking custom field translations.</description>
    <label>TestingObjectWithCustomFields</label>
    <nameField>
        <label>TestingObjectWithCustomFields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestingObjectWithCustomFieldss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>