gearset/main/default/objects/TestingObjectWithCustomFields__c/fields/ACustomFieldWithAGermanAndEngTranslation__c.field-meta.xml
<CustomField>
        <fullName>ACustomFieldWithAGermanAndEngTranslation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACustomFieldWithAGermanAndEngTranslation</label>
        <type>Checkbox</type>
    </CustomField>