gearset/main/default/objects/TestingObjectWithCustomFields__c/fields/ACustomFieldWithATranslation__c.field-meta.xml
<CustomField>
    <fullName>ACustomFieldWithATranslation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACustomFieldWithATranslation</label>
    <type>Checkbox</type>
</CustomField>