gearset/main/default/objects/TestingObjectWithCustomFields__c/fields/ACustomFieldWithJustAGermanTranslation__c.field-meta.xml
<CustomField>
        <fullName>ACustomFieldWithJustAGermanTranslation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACustomFieldWithJustAGermanTranslation</label>
        <type>Checkbox</type>
    </CustomField>