gearset/main/default/objects/TestingObjectWithCustomFields__c/fields/ACustomFieldWithoutATranslation__c.field-meta.xml
<CustomField>
    <fullName>ACustomFieldWithoutATranslation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACustomFieldWithoutATranslation</label>
    <type>Checkbox</type>
</CustomField>